updated api spec, added serviceproviders controller
